#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60)

# package author
AC_INIT(rdf, 0.1, slitvinov@gmail.com)
AC_CONFIG_SRCDIR([src/7colors.c])
AM_INIT_AUTOMAKE(7colors, 0.1)

AC_PROG_RANLIB
#AC_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CC

PKG_CHECK_MODULES([GTK], gtk+-2.0)
# Checks for libraries.

AC_OUTPUT(Makefile src/Makefile)
AC_OUTPUT
